Complete design of player menu. Menu class now Implements of Menu interface of constants. More rules and methods to evaluate and expand Menu implementations.
Application class now has the start application responsibility.